# zama_task

./: .env  .env.example  .gitignore  Cargo.toml  INDEXER_README.md  QUERY_CLI_README.md  REPORT-prompt.md  REPORT.md  error_todo  implementation_plan.md  task.md
src/: config.rs  deployment.rs  events.rs  insertion_worker.rs  lib.rs  main.rs  rpc.rs  scanner.rs
src/query/: commands.rs  formatters.rs  mod.rs
src/repository/: balance_repository.rs  database.rs  mod.rs  models.rs  token_repository.rs  transfer_repository.rs
